# nytaxi_mlops_monitoring

./: .gitignore  docker-compose.yml  dummy_metrics_calculation.py  evidently_metrics_calculation.py  evidently_metrics_calculation_hw.py  pyproject.toml
config/: grafana_datasources.yaml
dashboards/: data_drift.json  data_drift_hw.json
nb/: baseline_model.ipynb  baseline_model_hw.ipynb  hw.ipynb
