[project]
name = "nytaxi-mlops-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.1"
dependencies = [
    "evidently==0.6.7",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "prefect>=3.4.6",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
]
